# BerryMath

./: .gitignore  CMakeLists.txt  README.md  installation.sh  installer.cpp  lines.py  main.cpp  test.bm  test.bmast  test.sh
doc/: bytecode.md  syntax.md
doc/syntax/: syntax.md
doc/vm/: bytecode.md  thinking.md
include/: AST.h  BerryMath.h  ast.h  bmcache.h  btype.h  compiler.h  dylib.h  eval.h  interpreter.h  lex.h  memory.h  register.h  script.h  stack.cpp  stack.h  stringpp.h  sym.h  types.h  value.h  version.h  vm.h
jsoncpp-src-0.5.0/libs/: libjson.dylib
modules/: compile_all.sh
modules/RegExp/: CMakeLists.txt  library.h
modules/bmlang/: CMakeLists.txt  init.bm  library.cpp  library.h
modules/fs/: CMakeLists.txt  Makefile  library.cpp  library.h
modules/http/: CMakeLists.txt  Makefile  library.cpp  library.h
modules/http/curl-7.65.3/: Makefile  config.status  curl-config  libcurl.pc  libtool
modules/http/curl-7.65.3/docs/: Makefile
modules/http/curl-7.65.3/docs/cmdline-opts/: Makefile
modules/http/curl-7.65.3/docs/examples/: Makefile
modules/http/curl-7.65.3/docs/libcurl/: Makefile
modules/http/curl-7.65.3/docs/libcurl/opts/: Makefile
modules/http/curl-7.65.3/include/: Makefile
modules/http/curl-7.65.3/include/curl/: Makefile
modules/http/curl-7.65.3/lib/: curl_config.h
modules/http/curl-7.65.3/lib/.deps/: curl-curl_ctype.Po  curl-nonblock.Po  curl-strtoofft.Po  curl-warnless.Po  libcurl_la-altsvc.Plo  libcurl_la-amigaos.Plo  libcurl_la-asyn-ares.Plo  libcurl_la-asyn-thread.Plo  libcurl_la-base64.Plo  libcurl_la-conncache.Plo  libcurl_la-connect.Plo  libcurl_la-content_encoding.Plo  libcurl_la-cookie.Plo  libcurl_la-curl_addrinfo.Plo  libcurl_la-curl_ctype.Plo  libcurl_la-curl_des.Plo  libcurl_la-curl_endian.Plo  libcurl_la-curl_fnmatch.Plo  libcurl_la-curl_get_line.Plo  libcurl_la-curl_gethostname.Plo  libcurl_la-curl_gssapi.Plo  libcurl_la-curl_memrchr.Plo  libcurl_la-curl_multibyte.Plo  libcurl_la-curl_ntlm_core.Plo  libcurl_la-curl_ntlm_wb.Plo  libcurl_la-curl_path.Plo  libcurl_la-curl_range.Plo  libcurl_la-curl_rtmp.Plo  libcurl_la-curl_sasl.Plo  libcurl_la-curl_sspi.Plo  libcurl_la-curl_threads.Plo  libcurl_la-dict.Plo  libcurl_la-doh.Plo  libcurl_la-dotdot.Plo  libcurl_la-easy.Plo  libcurl_la-escape.Plo  libcurl_la-file.Plo  libcurl_la-fileinfo.Plo  libcurl_la-formdata.Plo  libcurl_la-ftp.Plo  (+76 more)
modules/http/curl-7.65.3/lib/.libs/: libcurl-symbols.expsym
modules/http/curl-7.65.3/lib/vauth/.deps/: libcurl_la-cleartext.Plo  libcurl_la-cram.Plo  libcurl_la-digest.Plo  libcurl_la-digest_sspi.Plo  libcurl_la-krb5_gssapi.Plo  libcurl_la-krb5_sspi.Plo  libcurl_la-ntlm.Plo  libcurl_la-ntlm_sspi.Plo  libcurl_la-oauth2.Plo  libcurl_la-spnego_gssapi.Plo  libcurl_la-spnego_sspi.Plo  libcurl_la-vauth.Plo
modules/http/curl-7.65.3/lib/vtls/.deps/: libcurl_la-gskit.Plo  libcurl_la-gtls.Plo  libcurl_la-mbedtls.Plo  libcurl_la-mesalink.Plo  libcurl_la-nss.Plo  libcurl_la-openssl.Plo  libcurl_la-polarssl.Plo  libcurl_la-polarssl_threadlock.Plo  libcurl_la-schannel.Plo  libcurl_la-schannel_verify.Plo  libcurl_la-sectransp.Plo  libcurl_la-vtls.Plo  libcurl_la-wolfssl.Plo
modules/http/curl-7.65.3/scripts/: Makefile
modules/http/curl-7.65.3/src/: Makefile  curl
modules/http/curl-7.65.3/src/.deps/: curl-slist_wc.Po  curl-tool_binmode.Po  curl-tool_bname.Po  curl-tool_cb_dbg.Po  curl-tool_cb_hdr.Po  curl-tool_cb_prg.Po  curl-tool_cb_rea.Po  curl-tool_cb_see.Po  curl-tool_cb_wrt.Po  curl-tool_cfgable.Po  curl-tool_convert.Po  curl-tool_dirhie.Po  curl-tool_doswin.Po  curl-tool_easysrc.Po  curl-tool_filetime.Po  curl-tool_formparse.Po  curl-tool_getparam.Po  curl-tool_getpass.Po  curl-tool_help.Po  curl-tool_helpers.Po  curl-tool_homedir.Po  curl-tool_hugehelp.Po  curl-tool_libinfo.Po  curl-tool_main.Po  curl-tool_metalink.Po  curl-tool_msgs.Po  curl-tool_operate.Po  curl-tool_operhlp.Po  curl-tool_panykey.Po  curl-tool_paramhlp.Po  curl-tool_parsecfg.Po  curl-tool_setopt.Po  curl-tool_sleep.Po  curl-tool_strdup.Po  curl-tool_urlglob.Po  curl-tool_util.Po  curl-tool_vms.Po  curl-tool_writeout.Po  curl-tool_xattr.Po
modules/http/curl-7.65.3/src/.libs/: curl
modules/http/curl-7.65.3/tests/: Makefile  configurehelp.pm
modules/http/curl-7.65.3/tests/certs/: Makefile
modules/http/curl-7.65.3/tests/certs/scripts/: Makefile
modules/http/curl-7.65.3/tests/data/: Makefile
modules/http/curl-7.65.3/tests/server/: Makefile
modules/http/curl-7.65.3/tests/unit/: Makefile
modules/os/: CMakeLists.txt  Makefile  library.cpp  library.h
modules/random/: CMakeLists.txt  Makefile  library.cpp  library.h
packageTexts/: .readme.txt.swp  introduction.txt
src/: AST.cpp  BerryMath.cpp  ast.cpp  bmcache.cpp  btype.cpp  compiler.cpp  dylib.cpp  eval.cpp  interpreter.cpp  lex.cpp  memory.cpp  register.cpp  script.cpp  stack.cpp  stringpp.cpp  sym.cpp  types.cpp  value.cpp  version.cpp  vm.cpp
system_files/: information.json  system.json
system_libs/BerryMathGlobal/: CMakeLists.txt  Makefile  doc.json  library.cpp  library.h
system_libs/BerryMathGlobal/include/: AST.h  BerryMath.h  btype.h  color.h  lex.h  memory.h  script.h  stringpp.h
system_libs/BerryMathGlobal/src/: AST.cpp  btype.cpp  memory.cpp  script.cpp  stringpp.cpp
tests/: CMakeLists.txt  Makefile  astTest.cpp  base.bm  expression.bm  for.bm  if.bm  index.bm  lexerTest.cpp  main.cpp  test.bm  test.bmast  test.json  test.tbmbin  test.tbmbin.bmbin  tests  variable.bm
testscript/: BinaryTree.bm  class.bm  function-args-list.bm  hex-oct-bin.bm  lambda.bm  refer.bm
(+14 files in other folders)
